tests/cases/compiler-development/artifact/errors/diagnostic-double-move.diagnostic
diagnostic error code=O0001 family=ownership message="cannot use moved binding 'token'" sources=1 labels=3 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari" bytes=201
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari" line=8 column=16 end_line=8 end_column=21 byte_start=151 byte_end=156 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari:8:16\n   |\n 8 |   let second = token;\n   |                ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari" line=7 column=15 end_line=7 end_column=20 byte_start=129 byte_end=134 message="binding 'token' was moved here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari:7:15\n   |\n 7 |   let first = token;\n   |               ^^^^^"
  Label index=2 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari" line=6 column=7 end_line=6 end_column=12 byte_start=83 byte_end=88 message="binding 'token' was declared here"
  Snippet label=2 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari:6:7\n   |\n 6 |   let token: own i64 = make_owned(1);\n   |       ^^^^^"
  Note index=0 location=none message="ownership state is tracked after moves, drops, and control-flow joins"
  Help index=0 location=none message="move this use before the move of 'token' or bind a fresh value"
